--- a/SubsetExportTool/www/mystyle.css
+++ b/SubsetExportTool/www/mystyle.css
@@ -7,13 +7,83 @@ body {
         background-color: #004990;
 }
 
-/*
+h2 {
+        font-family: 'Georgia', sans-serif;
+        font-size: 30px;
+        color: #ffffff;
+        display: inline;
+}
 
-@import url('//fonts.googleapis.com/css?family=Sabon');
+h3 {
+        font-family: 'Georgia', sans-serif;
+        font-size: 25px;
+        color: #000000;
+        display: inline;
+}
+
+h4 {
+        font-family: 'Georgia', sans-serif;
+        font-size: 20px;
+        color: #000000;
+        display: inline;
+}
+
+h5 {
+        font-family: 'Georgia', sans-serif;
+        font-size: 15px;
+        color: #000000;
+        display: inline;
+}
+
+h6 {
+        font-family: 'Georgia', sans-serif;
+        font-size: 10px;
+        color: #000000;
+        display: inline;
+}
+
+.myTitle {
+        margin-top: 100px;
+        margin-bottom: 50px;
+        text-align: center;
+}
 
 .myContent {
+        background-color: #004990;
         background-color: rgba(255, 255, 255, .5);
+        padding-top: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
+        max-width: 1000px;
+        margin: auto;
 }
+
+.tabs .content {
+    z-index: 0;/* or display: none; */
+    overflow: hidden;
+    width: 600px;
+    padding: 25px;
+    position: absolute;
+    top: 27px;
+    left: 0;
+    background: #303030;
+    color: #DFDFDF;
+    
+    opacity:0;
+    transition: opacity 400ms ease-out;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ffffff;
+    border-top: none;
+}
+
+
+
+/* WORK SPACE
+
 
 */
 
