--- a/SubsetExportTool/www/mystyle.css
+++ b/SubsetExportTool/www/mystyle.css
@@ -1,14 +1,14 @@
 body {
-        background-image: url("https://instructure-uploads.s3.amazonaws.com/account_180000000085240/attachments/53502025/CanvasWebsterLogo_login.svg?AWSAccessKeyId=AKIAJFNFXH2V2O7RPCAA&Expires=1936742155&Signature=V0WeM7MZPu0twNMpfUSMzMqLe7Q%3D&response-cache-control=Cache-Control%3Amax-age%3D473364000.0%2C%20public&response-expires=473364000.0");
+        background-image: url("http://www.webster.edu/images/globalmarketingcommunications/logo-downloads/logo_color_pms_280_136.jpg");
         background-size: 25%;        
         background-repeat: no-repeat;
         height: 100vh;
         background-position: bottom left;
-        background-color: #004990;
         /*
+        background-color: #004990;
+        */
         background-color: #ffffff;
         color: #B7B9BC;
-        */
         color: #000000;       
         font-family: 'Georgia', sans-serif;
 }
@@ -16,7 +16,7 @@ body {
 h2 {
         font-family: 'Georgia', sans-serif;
         font-size: 30px;
-        color: #FFFFFF;
+        color: #004990;
         display: inline;
 }
 
