--- a/SubsetExportTool/www/mystyle.css
+++ b/SubsetExportTool/www/mystyle.css
@@ -1,17 +1,27 @@
 body {
+        /*
         background-image: url("http://www.webster.edu/images/globalmarketingcommunications/logo-downloads/logo_color_pms_280_136.jpg");
         background-size: 20%;        
         background-repeat: no-repeat;
         height: 100vh;
-        background-position: top;
-        /*
+        background-position: bottom left;
         background-color: #004990;
         */
         background-color: #ffffff;
         color: #B7B9BC;
         color: #000000;       
-        font-family: 'Georgia', sans-serif;
+        font-family: 'Arial', sans-serif;
+        
 }
+
+img { 
+    width:100%; 
+}
+/*
+p {
+        color:#FFFFFF;
+}
+*/
 
 h2 {
         font-family: 'Georgia', sans-serif;
@@ -21,28 +31,28 @@ h2 {
 }
 
 h3 {
-        font-family: 'Georgia', sans-serif;
+        font-family: 'Arial', sans-serif;
         font-size: 25px;
         color: #004990;
         display: inline;
 }
 
 h4 {
-        font-family: 'Georgia', sans-serif;
+        font-family: 'Arial', sans-serif;
         font-size: 20px;
         color: #000000;
         display: inline;
 }
 
 h5 {
-        font-family: 'Georgia', sans-serif;
+        font-family: 'Arial', sans-serif;
         font-size: 15px;
         color: #000000;
         display: inline;
 }
 
 h6 {
-        font-family: 'Georgia', sans-serif;
+        font-family: 'Arial', sans-serif;
         font-size: 10px;
         color: #000000;
         display: inline;
